--- a/src/dark-theme.scss
+++ b/src/dark-theme.scss
@@ -1,6 +1,15 @@
 @use '@angular/material' as mat;
 
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 $dark-primary: mat.define-palette(mat.$indigo-palette, 500);
 $dark-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
@@ -14,4 +23,4 @@ $dark-theme: mat.define-dark-theme((
  )
 ));
 
-@include mat.all-component-themes($dark-theme);
+@include mat.all-legacy-component-themes($dark-theme);
