--- a/src/app/components/home-template/home-template.component.html
+++ b/src/app/components/home-template/home-template.component.html
@@ -4,10 +4,10 @@
       <a class="language_text">{{'main.shop' | translate}}</a>
       <a href="#" class="title">{{'main.title' | translate}}</a>
       <div class="spacer"></div>
-        <a href="#" class="language_text">Sign In</a>
+        <!-- <a href="#" class="language_text">Sign In</a>
         <a mat-button class="icon">
           <mat-icon>shopping_basket</mat-icon>
-        </a>
+        </a> -->
         <a mat-button [matMenuTriggerFor]="LanguageMenu" class="icon" aria-label="Example icon-button with a menu">
           <mat-icon>language</mat-icon>
         </a>
