--- a/src/app/modules/product/component/product.component.html
+++ b/src/app/modules/product/component/product.component.html
@@ -1,1 +1,6 @@
-<p>products works!</p>
+<div>Products ! </div>
+<div *ngFor="let product of products">
+    <div>{{product.id}}</div>
+    <div>{{product.price}}</div>
+    <div>{{product.category}}</div>
+</div>
