--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,3 +43,6 @@ $joyas_shop_fe-theme: mat.define-light-theme((
 
 
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
