--- a/src/app/modules/category/component/category.component.html
+++ b/src/app/modules/category/component/category.component.html
@@ -1,1 +1,24 @@
-<p>categories works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table">
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> {{'main.name' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>{{'main.actions' | translate}} </th>
+          <td mat-cell *matCellDef="let element">  </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+  
+  
