--- a/src/app/layouts/home-template/home-template.component.html
+++ b/src/app/layouts/home-template/home-template.component.html
@@ -1,37 +1,40 @@
 <div class="example-container">
-   <mat-toolbar class="example-toolbar">
-      <button class="ml-4" mat-icon-button (click)="openSideBar(snav)"><mat-icon>menu</mat-icon></button>
-      <a class="language_text">{{'main.stock' | translate}}</a>
-      <a href="#" class="title">{{'main.title' | translate}}</a>
+   <mat-toolbar class="example-toolbar dark:bg-slate-600">
+      <button class="ml-4 dark:text-white" mat-icon-button (click)="openSideBar(snav)"><mat-icon>menu</mat-icon></button>
+      <a href="#" class="language_text  dark:text-white">{{'main.stock' | translate}}</a>
+      <a href="#" class="title  dark:text-white" >{{'main.title' | translate}}</a>
       <div class="spacer"></div>
         <!-- <a href="#" class="language_text">Sign In</a>
-        <a mat-button class="icon">
-          <mat-icon>shopping_basket</mat-icon>
         </a> -->
-        <a mat-button [matMenuTriggerFor]="LanguageMenu" class="icon mr-8" aria-label="Example icon-button with a menu">
-          <mat-icon>language</mat-icon>
-          <span class="language_text">{{this.language}}</span>
+        <a (click)="switchDarkMode()" mat-button>
+          <mat-icon class="dark:text-white">wb_sunny</mat-icon>
         </a>
-        <mat-menu #LanguageMenu="matMenu">
+
+        <a mat-button [matMenuTriggerFor]="LanguageMenu" class="icon mr-8" aria-label="Example icon-button with a menu">
+          <mat-icon class="dark:text-white">language</mat-icon>
+          <span class="language_text dark:text-white">{{this.language}}</span>
+        </a>
+        <mat-menu class="dark:bg-slate-600" #LanguageMenu="matMenu">
           <div *ngFor="let lang of languages">
             <a mat-menu-item (click)="setSelectedLanguage(lang.code)">
-              <span class="language_text">{{ lang.label | translate}}</span>
-              <!-- <mat-icon>brightness_3</mat-icon> -->
+              <span class="language_text dark:text-white">{{ lang.label | translate}}</span>
             </a>
           </div>
         </mat-menu>
     </mat-toolbar>
  
-   <mat-sidenav-container class="example-sidenav-container">
-     <mat-sidenav class="sidenav" #snav fixedTopGap="56">
+   <mat-sidenav-container class="example-sidenav-container dark:bg-slate-600">
+     <mat-sidenav class="sidenav dark:bg-slate-600" #snav fixedTopGap="56">
        <mat-nav-list>
-        <div class="sidenav-items">
-          <a class="font-handle" routerLink="{{nav.link}}" mat-list-item *ngFor="let nav of rountings">{{nav.name}}</a>
+        <div class="sidenav-items dark:text-white">
+          <a routerLink="{{nav.link}}" mat-list-item *ngFor="let nav of rountings">
+            <span class="text-label">{{nav.name}}</span>
+          </a>
         </div>
        </mat-nav-list>
      </mat-sidenav>
      <mat-sidenav-content>
-      <div class="p-20">
+      <div class="p-20 dark:bg-slate-600">
         <router-outlet></router-outlet>
       </div>
      </mat-sidenav-content>
