--- a/src/tailwind-styles.scss
+++ b/src/tailwind-styles.scss
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+html, body { height: 100%; }
+
+.title{
+    @apply  text-center flex-1 text-2xl font-bold font-dancing-script;
+}
+
+.text-label{
+    @apply font-kalam;
+}
