fix enum export issue

--- a/src/app/modules/category/add-category/add-category.component.html
+++ b/src/app/modules/category/add-category/add-category.component.html
@@ -1,28 +1,25 @@
 <div class="p-8 dark:bg-slate-600">
     <form action="">
-        <input type="hidden" />
+        <input type="hidden" name="category_id" />
         <p class="title text-center dark:text-white">Add new Category</p>
         <div class="mt-8">
             <mat-grid-list cols="3" rowHeight="2:1">
             <mat-grid-tile>
                 <div>
-                    <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white text-label text-center">{{'language.english' | translate }}</label>
-                    <input type="text" id="first_name" class="text-label bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
-                    <input type="hidden" />
+                    <label for="category_name_english" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white text-label text-center">{{'language.english' | translate }}</label>
+                    <input type="text" id="category_name_english" name= "category_name_english" class="text-label bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
                 </div>
             </mat-grid-tile>
             <mat-grid-tile>
                 <div>
-                    <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white text-label text-center">{{'language.french' | translate }}</label>
-                    <input type="text" id="first_name" class="text-label bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
-                    <input type="hidden" />
+                    <label for="category_name_french" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white text-label text-center">{{'language.french' | translate }}</label>
+                    <input type="text" id="category_name_french" class="text-label bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
                 </div>
             </mat-grid-tile>
             <mat-grid-tile>
                 <div>
-                    <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white text-label text-center">{{'language.spanish' | translate }}</label>
-                    <input type="text" id="first_name" class="text-label bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
-                    <input type="hidden"/>
+                    <label for="category_name_spanish" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white text-label text-center">{{'language.spanish' | translate }}</label>
+                    <input type="text" id="category_name_spanish" class="text-label bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
                 </div>
             </mat-grid-tile>
             </mat-grid-list>
